--- a/style.css
+++ b/style.css
@@ -1,20 +1,26 @@
-body{
+body , html{
     padding: 0;
     margin: 0;
-    background-image: url(https://images7.alphacoders.com/428/thumb-1920-428259.jpg);
+    background-image: url(https://globalgrasshopper.com/wp-content/uploads/2012/01/10-of-the-most-beautiful-places-to-visit-in-Laos.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-attachment: fixed;
     background-size: cover;
     background-color: #363636;
     font-size: 18px;
-    justify-content: center;
-    align-items: center;
     box-sizing: border-box;
+    outline: none;
 }
-.db{
-    margin: 5px;
+#title{
+    text-shadow: 0px 2px 0px #708090;
+    text-align: center;
+    color: #BEBEBE;
+    font-size: 100px;
+}
+#cards-position{
+    display: flex;
     align-items: center;
+    justify-content: center;
 }
 h4{
     text-align: center;
