--- a/style.css
+++ b/style.css
@@ -23,11 +23,13 @@ body , html{
     justify-content: center;
 }
 .cards{
-    height: 150PX;
+    height: 175PX;
     width: 270px;
-    background-color: #fff;
+    background-color: #C1F4C5BB;
     margin-left: 15px;
     border-radius: 19px;
+    box-shadow: 5px 5px 5px 5px #1C0A00BB;
+
 }
 .cards-content{
     display: flex;
@@ -36,9 +38,29 @@ body , html{
     flex-direction: column;
 }
 .cards-content  h1{
+    margin-top: 15px;
     margin-bottom: 5px;
 }
 .cards-content , form{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
+.cards-content input{
+    width: 220px;
+    outline: none;
+    border: none;
+    padding: 15px;
+    margin-bottom: 4px;
+    border-radius: 5px;
+    background-color: #C1F4C5BB;
+    font-size: 14px;
+}
+.efeito:hover{
+    background-color: #603601BB;
+    color: #fff;
+    font-size: 18px;
+    transition: 0.3s ease;
+}
+
